copying the main code

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div id="results">
           <h1>results</h1>
           <p>distance : <span id="distance-result"></span></p>
-          <p>vehihucles used : <span id="vehicules-result"></span></p>
+          <p>Vehicles used : <span id="vehicules-result"></span></p>
           <p>Routes :</p>
           <ol id="routes-result">
           </ol>
@@ -93,7 +93,7 @@
     <div id="selected-customer">
       <p> customer ID : <span id="cust-id-result"></span></p>
       <p> customer coordinates : <span id="cust-coord"></span></p>
-      <p>demande : <span id="demande-result"></span></p>
+      <p>demand : <span id="demande-result"></span></p>
     </div>
   </section>
   <script src="js/functions.js"></script>
