operating cost and transportation cost added [done]

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           </div>
         </form>
         <p id="input-notif">please give valid input.</p>
-        <button id="excute-btn" onclick="excute()">Execute</button>
+        <button id="execute-btn" onclick="execute()">Execute</button>
 
         <div id="results">
-          <h1>results</h1>
-          <p>distance : <span id="distance-result"></span></p>
+          <h1>Results</h1>
+          <p>Total Cost : <span id="distance-result"></span></p>
           <p>Vehicles used : <span id="vehicules-result"></span></p>
           <p>Routes :</p>
           <ol id="routes-result">
@@ -82,11 +82,10 @@
     </div>
 
     <div id="selected-route">
-      <p>route : <span id="num-route-result"></span></p>
-
-      <p>distance : <span id="distance-route-result"></span></p>
-      <p>load : <span id="vehicules-load-result"></span></p>
-      <p>capacity of vehicule : <span id="vehicules-capacity"></span></p>
+      <p>Route : <span id="num-route-result"></span></p>
+      <p>Distance : <span id="distance-route-result"></span></p>
+      <p>Load : <span id="vehicules-load-result"></span></p>
+      <p>Capacity of Vehicle : <span id="vehicules-capacity"></span></p>
 
     </div>
 
@@ -100,6 +99,7 @@
   <script src="js/customer.js"></script>
   <script src="js/population.js"></script>
   <script src="js/genes.js"></script>
+  <script src="js/fitness.js"></script>
   <script src="main.js"></script>
 
 
