spelling correction [done]

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <option value="r101">r101</option>
             <option value="rc201">rc201</option>
           </select>
-          <p id="data-notif">please select data.</p>
+          <p id="data-notif">Please select data.</p>
         </div>
 
 
@@ -61,7 +61,7 @@
         <div id="results">
           <h1>Results</h1>
           <p>Total Cost : <span id="distance-result"></span></p>
-          <p>Vehicles used : <span id="vehicules-result"></span></p>
+          <p>Vehicles used : <span id="vehicles-result"></span></p>
           <p>Routes :</p>
           <ol id="routes-result">
           </ol>
@@ -84,8 +84,8 @@
     <div id="selected-route">
       <p>Route : <span id="num-route-result"></span></p>
       <p>Distance : <span id="distance-route-result"></span></p>
-      <p>Load : <span id="vehicules-load-result"></span></p>
-      <p>Capacity of Vehicle : <span id="vehicules-capacity"></span></p>
+      <p>Load : <span id="vehicles-load-result"></span></p>
+      <p>Capacity of Vehicle : <span id="vehicles-capacity"></span></p>
 
     </div>
 
