upto CO2 emission cost [done]

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="main">
     <div class="container">
       <div class="github">
-        <a href="https://github.com/ismail-benlaredj/vehicle-routing-problem">
+        <a href="https://github.com/limon-programming-hero/vehicle-routing-problem">
           <div class="github_icon">
             <img src="/assets/github.svg" alt="Github icon" />
             source code
@@ -44,7 +44,7 @@
 
           <div class="input">
             <label for="">crossover ratio </label>
-            <input type="number" id="crossover-ratio" placeholder="ex: 70%" maxlength="2" />
+            <input type="number" id="crossover-ratio" placeholder="ex: 70%" maxlength="2" min="10" />
           </div>
           <div class="input">
             <label for="">mutation rate</label>
