--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <option value="c201">c201</option>
             <option value="r101">r101</option>
             <option value="rc201">rc201</option>
+            <option value="rdt101">rdt101</option>
             <option value="pyo101">pyo101</option>
             <option value="pso101">pso101</option>
           </select>
